--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "echarts": "^6.0.0",
     "element-ui": "2.13.2",
     "js-cookie": "^2.2.0",
+    "lodash-es": "^4.17.21",
     "mqtt": "^5.14.1",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
